--- a/RI/TPRI/TP2.ipynb
+++ b/RI/TPRI/TP2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,24 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\2324064935.py:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\3450456013.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
     }
@@ -57,23 +49,10 @@
     "            file = open(self.files[i]).read()\n",
     "            file = file.replace(\"\\n\",\"\")\n",
     "\n",
-    "            if not split :\n",
-    "                Termes = file.split()\n",
-    "            if split:\n",
+    "            Termes = self.splitter(file)\n",
     "\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
-    "                Termes = ExpReg.tokenize(file) \n",
-    "\n",
-    "\n",
-    "            if Lancaster :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                Lancaster = nltk.LancasterStemmer()\n",
-    "                TermesNormalisation = [Lancaster.stem(terme) for terme in TermesSansMotsVides]\n",
-    "            else :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                porter = nltk.PorterStemmer()\n",
-    "                TermesNormalisation = [porter.stem(terme) for terme in TermesSansMotsVides]\n",
-    "\n",
+    "            TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
+    "            TermesNormalisation = [self.normalize(terme) for terme in TermesSansMotsVides]\n",
     "\n",
     "            for term in TermesNormalisation:\n",
     "                \n",
@@ -109,21 +88,10 @@
     "            file = file.replace(\"\\n\",\"\")\n",
     "\n",
     "\n",
-    "            if not split :\n",
-    "                Termes = file.split()\n",
-    "            if split:\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
-    "                Termes = ExpReg.tokenize(file) \n",
+    "            Termes = self.splitter(file)\n",
     "\n",
-    "\n",
-    "            if Lancaster :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                Lancaster = nltk.LancasterStemmer()\n",
-    "                TermesNormalisation = [Lancaster.stem(terme) for terme in TermesSansMotsVides]\n",
-    "            else :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                porter = nltk.PorterStemmer()\n",
-    "                TermesNormalisation = [porter.stem(terme) for terme in TermesSansMotsVides]\n",
+    "            TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
+    "            TermesNormalisation = [self.normalize(terme) for terme in TermesSansMotsVides]\n",
     "\n",
     "            for term in TermesNormalisation:\n",
     "                \n",
@@ -201,9 +169,9 @@
     "\n",
     "        for doc in range(self.N):\n",
     "            QD = 0\n",
-    "            v2 = 0\n",
-    "            w2 = 0\n",
     "            for term in normterms:\n",
+    "                v2 = 0\n",
+    "                w2 = 0\n",
     "                if (term.lower(),doc) in self.dict.keys():\n",
     "                    weight = self.calcWeight(term,doc)\n",
     "                    QD+= weight\n",
@@ -211,18 +179,55 @@
     "                    v2+=1\n",
     "            try:\n",
     "                if typeV == vect.COSINE:\n",
-    "                    QD = QD / (v2*w2)\n",
+    "                    QD = QD / (math.sqrt(v2)*math.sqrt(w2))\n",
     "                if typeV == vect.JACCARD:\n",
     "                    QD = QD / (w2+v2 - QD)\n",
     "            except ZeroDivisionError:\n",
     "                QD = 0\n",
-    "\n",
-    "\n",
     "            rsv[doc] = QD\n",
     "\n",
     "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
     "        return rsv\n",
     "\n",
+    "    def bm25(self,termes,K,B):\n",
+    "        rsv = {}\n",
+    "        termes = self.splitter(termes)\n",
+    "        normterms = []\n",
+    "        dls = {}\n",
+    "\n",
+    "        for term in termes:\n",
+    "            normterms.append(self.normalize(term))\n",
+    "\n",
+    "        for term,doc in self.dict.keys():\n",
+    "            if doc in dls.keys():\n",
+    "                dls[doc] +=1\n",
+    "            else:\n",
+    "                dls[doc] = 1\n",
+    "        avdl = 0\n",
+    "        for key in dls.keys():\n",
+    "            avdl += dls[key]\n",
+    "        avdl = avdl / len(dls.keys())\n",
+    "\n",
+    "        for doc in range(self.N):\n",
+    "            QD = 0\n",
+    "            for term in normterms:\n",
+    "                if (term.lower(),doc) in self.dict.keys():\n",
+    "                    ni = 0\n",
+    "                    for doc2 in range(self.N):\n",
+    "                        if (term.lower(),doc2) in self.dict.keys():\n",
+    "                            ni+=1\n",
+    "                    freq = self.dict[(term.lower(),doc)]\n",
+    "\n",
+    "                    log = math.log10((self.N - ni + 0.5) / (ni + 0.5))\n",
+    "                    val = freq + K*((1-B)+(B*dls[doc]/avdl))\n",
+    "                    val = freq/val\n",
+    "                QD+= val\n",
+    "\n",
+    "            rsv[doc] = QD\n",
+    "\n",
+    "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
+    "        return rsv\n",
+    "        pass\n",
     "        \n",
     "d = Docs(Lancaster=False,split=True)\n",
     "\n",
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -240,15 +245,15 @@
      "text": [
       "Exception in Tkinter callback\n",
       "Traceback (most recent call last):\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
       "    return self.func(*args)\n",
       "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\1199361307.py\", line 37, in on_token_change\n",
+      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\2165231193.py\", line 37, in on_token_change\n",
       "    search()\n",
-      "  File \"C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_13044\\1199361307.py\", line 10, in search\n",
+      "  File \"C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_7520\\2165231193.py\", line 10, in search\n",
       "    table.delete(*table.get_children())\n",
       "                  ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"d:\\APPS\\python\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
+      "  File \"c:\\Users\\mekki\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\ttk.py\", line 1195, in get_children\n",
       "    self.tk.call(self._w, \"children\", item or '') or ())\n",
       "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "_tkinter.TclError: invalid command name \".!frame.!treeview\"\n"
@@ -381,7 +386,6 @@
     "\n",
     "# Create a StringVar to hold the selected option\n",
     "selected_option = tk.StringVar()\n",
-    "\n",
     "# Create a Combobox\n",
     "combo = ttk.Combobox(Matching_label_frame, textvariable=selected_option, state='readonly')\n",
     "combo['values'] = ('SCALAR','JACCARD', 'COSINE')  # Set the available choices\n",
