--- a/RI/TPRI/TP4.ipynb
+++ b/RI/TPRI/TP4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "<>:123: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:26: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:77: SyntaxWarning: invalid escape sequence '\\.'\n",
-      "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n",
-      "C:\\Users\\Mekki\\AppData\\Local\\Temp\\ipykernel_8396\\2324064935.py:123: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:99: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\mekki\\AppData\\Local\\Temp\\ipykernel_6100\\763142252.py:99: SyntaxWarning: invalid escape sequence '\\.'\n",
       "  ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>>\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 71, 1: 97, 2: 94, 3: 79, 4: 93, 5: 82}\n",
+      "86.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0,\n",
+       " 2: -0.3985143240716214,\n",
+       " 1: -0.4209311042428931,\n",
+       " 5: -0.4245830027506067,\n",
+       " 4: -0.44015611513887976,\n",
+       " 3: -0.504561305292754}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,23 +72,10 @@
     "            file = open(self.files[i]).read()\n",
     "            file = file.replace(\"\\n\",\"\")\n",
     "\n",
-    "            if not split :\n",
-    "                Termes = file.split()\n",
-    "            if split:\n",
+    "            Termes = self.splitter(file)\n",
     "\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
-    "                Termes = ExpReg.tokenize(file) \n",
-    "\n",
-    "\n",
-    "            if Lancaster :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                Lancaster = nltk.LancasterStemmer()\n",
-    "                TermesNormalisation = [Lancaster.stem(terme) for terme in TermesSansMotsVides]\n",
-    "            else :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                porter = nltk.PorterStemmer()\n",
-    "                TermesNormalisation = [porter.stem(terme) for terme in TermesSansMotsVides]\n",
-    "\n",
+    "            TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
+    "            TermesNormalisation = [self.normalize(terme) for terme in TermesSansMotsVides]\n",
     "\n",
     "            for term in TermesNormalisation:\n",
     "                \n",
@@ -109,21 +111,10 @@
     "            file = file.replace(\"\\n\",\"\")\n",
     "\n",
     "\n",
-    "            if not split :\n",
-    "                Termes = file.split()\n",
-    "            if split:\n",
-    "                ExpReg = nltk.RegexpTokenizer('(?:[A-Za-z]\\.)+|[A-Za-z]+[\\-@]\\d+(?:\\.\\d+)?|\\d+[A-Za-z]+|\\d+(?:[\\.\\,]\\d+)?%?|\\w+(?:[\\-/]\\w+)*') # \\d : équivalent à [0-9] >>> \n",
-    "                Termes = ExpReg.tokenize(file) \n",
+    "            Termes = self.splitter(file)\n",
     "\n",
-    "\n",
-    "            if Lancaster :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                Lancaster = nltk.LancasterStemmer()\n",
-    "                TermesNormalisation = [Lancaster.stem(terme) for terme in TermesSansMotsVides]\n",
-    "            else :\n",
-    "                TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
-    "                porter = nltk.PorterStemmer()\n",
-    "                TermesNormalisation = [porter.stem(terme) for terme in TermesSansMotsVides]\n",
+    "            TermesSansMotsVides = [terme for terme in Termes if terme.lower() not in MotsVides]\n",
+    "            TermesNormalisation = [self.normalize(terme) for terme in TermesSansMotsVides]\n",
     "\n",
     "            for term in TermesNormalisation:\n",
     "                \n",
@@ -223,15 +214,59 @@
     "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
     "        return rsv\n",
     "\n",
+    "    def bm25(self,termes,K,B):\n",
+    "        rsv = {}\n",
+    "        termes = self.splitter(termes)\n",
+    "        normterms = []\n",
+    "        dls = {}\n",
+    "\n",
+    "        for term in termes:\n",
+    "            normterms.append(self.normalize(term))\n",
+    "\n",
+    "        for term,doc in self.dict.keys():\n",
+    "            if doc in dls.keys():\n",
+    "                dls[doc] +=1\n",
+    "            else:\n",
+    "                dls[doc] = 1\n",
+    "\n",
+    "        avdl = 0\n",
+    "        for key in dls.keys():\n",
+    "            avdl += dls[key]\n",
+    "        avdl = avdl / len(dls.keys())\n",
+    "        print(dls)\n",
+    "        print(avdl)\n",
+    "        for doc in range(self.N):\n",
+    "            QD = 0\n",
+    "            for term in normterms:\n",
+    "                val = 0\n",
+    "                if (term.lower(),doc) in self.dict.keys():\n",
+    "                    ni = 0\n",
+    "                    for doc2 in range(self.N):\n",
+    "                        if (term.lower(),doc2) in self.dict.keys():\n",
+    "                            ni+=1\n",
+    "                    freq = self.dict[(term.lower(),doc)]\n",
+    "\n",
+    "                    log = math.log10((self.N - ni + 0.5) / (ni + 0.5))\n",
+    "                    val = freq + (K*((1-B)+(B*dls[doc]/avdl)))\n",
+    "                    val = (freq/val)*log\n",
+    "\n",
+    "                QD+= val\n",
+    "\n",
+    "            rsv[doc] = QD\n",
+    "\n",
+    "        rsv = dict(sorted(rsv.items(), key=lambda item: item[1],reverse=True))\n",
+    "        return rsv\n",
     "        \n",
     "d = Docs(Lancaster=False,split=True)\n",
     "\n",
-    "d.DictWeight()\n"
+    "d.DictWeight()\n",
+    "\n",
+    "d.bm25(\"document ranking\",2.0,1.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +280,7 @@
        " 0: 0}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
